Beginning of the search added.

--- a/view/main.fxml
+++ b/view/main.fxml
@@ -24,7 +24,7 @@
                   </HBox>
                </children>
             </VBox>
-            <GridPane fx:id="bord">
+            <GridPane fx:id="bordView">
               <columnConstraints>
               </columnConstraints>
               <rowConstraints>
