--- a/view/main.fxml
+++ b/view/main.fxml
@@ -11,25 +11,25 @@
 <?import javafx.scene.layout.VBox?>
 
 
-      <SplitPane dividerPositions="0.29797979797979796, 0.5, 0.5" prefHeight="160.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewController">
-        <items>
-            <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <ScrollPane prefHeight="200.0" prefWidth="200.0" />
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
+<SplitPane dividerPositions="0.29797979797979796, 0.5, 0.5" prefHeight="160.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewController">
+    <items>
+        <VBox prefHeight="200.0" prefWidth="100.0">
+            <children>
+                <ScrollPane prefHeight="200.0" prefWidth="200.0" fx:id="found"/>
+                <HBox prefHeight="100.0" prefWidth="200.0">
+                    <children>
                         <Button mnemonicParsing="false" text="Start" onAction="#start"/>
                         <Button mnemonicParsing="false" text="reset" />
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-            <GridPane fx:id="bordView">
-              <columnConstraints>
-              </columnConstraints>
-              <rowConstraints>
-              </rowConstraints>
-            </GridPane>
-        </items>
-      </SplitPane>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
+        <GridPane fx:id="bordView">
+            <columnConstraints>
+            </columnConstraints>
+            <rowConstraints>
+            </rowConstraints>
+        </GridPane>
+    </items>
+</SplitPane>
 
