--- a/view/main.fxml
+++ b/view/main.fxml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<SplitPane dividerPositions="0.29797979797979796, 0.5, 0.5" prefHeight="160.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewController">
+<SplitPane dividerPositions="0.29797979797979796" prefHeight="320.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewController">
     <items>
         <VBox prefHeight="200.0" prefWidth="100.0">
             <children>
-                <ScrollPane prefHeight="200.0" prefWidth="200.0" fx:id="found"/>
-                <HBox prefHeight="100.0" prefWidth="200.0">
+            <TextArea fx:id="found" prefHeight="500.0" prefWidth="62.0" />
+                <HBox prefHeight="10.0" prefWidth="200.0">
                     <children>
-                        <Button mnemonicParsing="false" text="Start" onAction="#start"/>
+                        <Button mnemonicParsing="false" onAction="#start" text="Start" />
                         <Button mnemonicParsing="false" text="reset" />
+                  <Label text="Words found: " />
+                  <Label fx:id="amount" text="0" />
+
                     </children>
                 </HBox>
             </children>
         </VBox>
         <GridPane fx:id="bordView">
-            <columnConstraints>
-            </columnConstraints>
-            <rowConstraints>
-            </rowConstraints>
+            <!--<columnConstraints>-->
+            <!--</columnConstraints>-->
+            <!--<rowConstraints>-->
+            <!--</rowConstraints>-->
         </GridPane>
     </items>
 </SplitPane>
-
